# compmatmul

./: Apptainer.def  CMakeLists.txt  LICENSE  README.md  array.hpp  compmatmul.cpp  hashing.hpp  matmul_fft.hpp  matmul_fwht.hpp  matmul_sketch.hpp  multiply.cpp  rng.hpp  test.py  tests.cpp  transform.hpp
